# swim-create

./: .gitmodules  Cargo.toml  Readme.md  development.md  swim-create-spec.md
.github/workflows/: build-releases.yaml
src/: error.rs  file_names.rs  main.rs  utils.rs
templates/: MainPlane.java  build.gradle  module-info.java  server.recon  settings.gradle
templates/swim-gradle-module-template/: settings.gradle
templates/swim-gradle-module-template/src/main/java/: module-info.java
templates/swim-maven-module-template/src/main/java/{{name}}/: MainPlane.java
templates/swim-maven-template/: pom.xml
templates/swim-maven-template/src/main/resources/: server.recon
templates/swim-rust-template/: Cargo.toml
templates/swim-rust-template/src/: main.rs  utils.rs
templates/swim-template/: build.gradle
