[package]
name = "swim-create"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
regex = "1.9.1"
tera = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
rust-embed = { version = "8.0.0", features = ["include-exclude"] }